public/scss/_slider.scss
.prod-slides {
    height: 530px;
    overflow: hidden;
    @media(max-width: 767px){
           height: 130vw;
    }
    @media only screen and (min-width: 768px)
{
    height: 450px;
   }
}
.loader {
    background: #ffffff url(../img/loader_818e.gif) center center no-repeat;
    width: 100%;
    position: absolute;
    z-index: 999;
    padding-bottom: 78.054971%;
      @media(max-width: 767px){
        padding-bottom: 128.95377129%
    }
}
.prod-slides li {
    opacity: 0;
    transition: all 0.5s ease;
}
.prod-slides.slick-initialized {
    background: none;
}
.prod-slides.slick-initialized li {
    opacity: 1;
    position: relative;
}
.slick-disabled {
    opacity: 0;
}
.center {
    overflow: overlay;
    transition: all 0.5s ease;
    &>.prod-slides.slick-initialized {
        background: none!important;
        height: auto;
        overflow: auto;
        transition: all 0.5s ease;
        &>.generic-item-wrap-class {
            visibility: visible;
        }
    }
}
/*.slick-slide {
    opacity: 0.3;
    img {
        -webkit-filter: grayscale(100%);
        filter: grayscale(100%);
    }
}
.slick-center {
    opacity: 0.9;
    img {
        -webkit-filter: grayscale(0%);
        filter: grayscale(0%);
    }
}*/

/* Arrows */

.slick-loading .slick-list {
    background: #fff url('../img/ajax-loader.gif') center center no-repeat;
}
/* Icons */

@font-face {
    font-family: 'slick';
    font-weight: normal;
    font-style: normal;
    src: url('../fonts/slick.eot');
    src: url('../fonts/slick.eot?#iefix') format('embedded-opentype'), url('../fonts/slick.woff') format('woff'), url('../fonts/slick.ttf') format('truetype'), url('../fonts/slick.svg#slick') format('svg');
}
.slick-prev, .slick-next {
    font-size: 0;
    line-height: 0;
    position: absolute;
    top: 50%;
    display: block;
    width: 20px;
    height: 20px;
    padding: 0;
    -webkit-transform: translate(0, -50%);
    -ms-transform: translate(0, -50%);
    transform: translate(0, -50%);
    z-index: 9;
    cursor: pointer;
    color: transparent;
    border: none;
    outline: none;
    background: transparent;
}
.slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
    color: transparent;
    outline: none;
    background: transparent;
}
.slick-prev:hover:before, .slick-prev:focus:before, .slick-next:hover:before, .slick-next:focus:before {
    opacity: 1;
}
.slick-prev.slick-disabled:before, .slick-next.slick-disabled:before {
    opacity: .25;
}
.slick-prev:before, .slick-next:before {
    font-family: 'slick';
    font-size: 30px;
    line-height: 1;
    color: #000;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
.slick-prev {
    left: 35px;
    background: url(../img/sprite.png)no-repeat !important;
    width: 52px;
    height: 52px;
    background-position: -395px -118px!important;
}
.slick-next {
    right: 35px;
    background: url(../img/sprite.png)no-repeat!important;
    width: 52px;
    height: 52px;
    background-position: -315px -118px!important;
}

